--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Coding challenge",
   "scripts": {
-    "start": "node scripts/start"
+    "start": "node scripts/start",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
@@ -20,6 +21,8 @@
     "babel-runtime": "^6.3.19",
     "css-loader": "^0.25.0",
     "css-modules-require-hook": "^4.0.5",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "4.4.x",
     "eslint-config-google": "0.9.x",
     "eslint-config-prettier": "2.3.x",
@@ -27,8 +30,9 @@
     "eslint-plugin-prettier": "2.1.x",
     "eslint-plugin-react": "7.x.x",
     "extract-text-webpack-plugin": "^1.0.1",
-    "prettier": "^1.5.3",
+    "jest": "^23.2.0",
     "postcss-loader": "^1.2.1",
+    "prettier": "^1.5.3",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
